static/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.day {
  display: inline-block;
  border: 1px solid rgba(0, 0, 0, 0.1);
  overflow: scroll;
}

.row {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
}

.event {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 2px;
  font-size: 0.8em;
  border-radius: 3px;
  margin-top: 2px;
}

.header {
  font-size: 1em;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  background-color: #f0f0f0;
  font-weight: bold;
  text-align: center;
  height: 2rem;
  line-height: 2rem;
}

.instructions {
  transform: translateX(0%);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  background-color: rgba(255, 255, 255, 0.9);
  padding: 1rem;
  border-radius: 5px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.4);
  transition: transform 0.3s ease-in-out;
}

.instructions:hover {
  background-color: rgba(230, 230, 230, 0.9);
  cursor: pointer;
}

.instructions-hidden {
  transform: translateX(100%);
}

.slide-transition {
  transition: transform 0.3s ease-in-out;
}

.instructions-close {
  position: absolute;
  top: 0rem;
  right: 0.5rem;
  cursor: pointer;
  font-size: 1.2rem;
}

h1 {
  font-size: 1.6rem;
}

